faltam somente alguns ajustes
