# backend/model/clientesModel.js
@@ -10,6 +10,8 @@ class ClientesModel {
     #cidadeCliente;
     #estadoCliente;
     #cepCliente;
+    #bairroCliente;
+    #numCasa;
     #createdBy;
     #updatedBy;
     #created_at;
@@ -27,8 +29,10 @@ class ClientesModel {
     get updatedBy() { return this.#updatedBy } set updatedBy(updatedBy) { this.#updatedBy = updatedBy }
     get created_at() { return this.#created_at } set created_at(created_at) { this.#created_at = created_at }
     get updated_at() { return this.#updated_at } set updated_at(updated_at) { this.#updated_at = updated_at }
+    get bairroCliente() { return this.#bairroCliente } set bairroCliente(bairroCliente) { this.#bairroCliente = bairroCliente }
+    get numCasa() { return this.#numCasa } set numCasa(numCasa) { this.#numCasa = numCasa }
 
-    constructor(idCliente, nomeCliente, telefoneCliente, pode_ligar, enderecoCliente, cidadeCliente, estadoCliente, cepCliente, createdBy, updatedBy, created_at, updated_at) {
+    constructor(idCliente, nomeCliente, telefoneCliente, pode_ligar, enderecoCliente, cidadeCliente, estadoCliente, cepCliente, bairroCliente, numCasa, createdBy, updatedBy, created_at, updated_at) {
         this.#idCliente = idCliente;
         this.#nomeCliente = nomeCliente;
         this.#telefoneCliente = telefoneCliente;
@@ -37,6 +41,8 @@ class ClientesModel {
         this.#cidadeCliente = cidadeCliente;
         this.#estadoCliente = estadoCliente;
         this.#cepCliente = cepCliente;
+        this.#bairroCliente = bairroCliente;
+        this.#numCasa = numCasa;
         this.#createdBy = createdBy;
         this.#updatedBy = updatedBy;
         this.#created_at = created_at;
@@ -53,6 +59,8 @@ class ClientesModel {
             'cidadeCliente': this.#cidadeCliente,
             'estadoCliente': this.#estadoCliente,
             'cepCliente': this.#cepCliente,
+            'bairroCliente': this.#bairroCliente,
+            'numCasa': this.#numCasa,
             'createdBy': this.#createdBy,
             'updatedBy': this.#updatedBy,
             'created_at': this.#created_at,
@@ -65,7 +73,7 @@ class ClientesModel {
         let rows = await banco.ExecutaComando(sql);
         let lista = [];
         for (let i = 0; i < rows.length; i++) {
-            lista.push(new ClientesModel(rows[i]['idCliente'], rows[i]['nomeCliente'], rows[i]['telefoneCliente'], rows[i]['pode_ligar'], rows[i]['enderecoCliente'], rows[i]['cidadeCliente'], rows[i]['estadoCliente'], rows[i]['cepCliente'], rows[i]['createdBy'], rows[i]['updatedBy'], rows[i]['created_at'], rows[i]['updated_at']));
+            lista.push(new ClientesModel(rows[i]['idCliente'], rows[i]['nomeCliente'], rows[i]['telefoneCliente'], rows[i]['pode_ligar'], rows[i]['enderecoCliente'], rows[i]['cidadeCliente'], rows[i]['estadoCliente'], rows[i]['cepCliente'], rows[i]['bairroCliente'], rows[i]['numCasa'], rows[i]['createdBy'], rows[i]['updatedBy'], rows[i]['created_at'], rows[i]['updated_at']));
         }
         return lista;
     }
@@ -75,7 +83,7 @@ class ClientesModel {
         let valores = [idCliente];
         let rows = await banco.ExecutaComando(sql, valores);
         if (rows.length > 0) {
-            let cliente = new ClientesModel(rows[0]['idCliente'], rows[0]['nomeCliente'], rows[0]['telefoneCliente'], rows[0]['pode_ligar'], rows[0]['enderecoCliente'], rows[0]['cidadeCliente'], rows[0]['estadoCliente'], rows[0]['cepCliente'], rows[0]['createdBy'], rows[0]['updatedBy'], rows[0]['created_at'], rows[0]['updated_at']);
+            let cliente = new ClientesModel(rows[0]['idCliente'], rows[0]['nomeCliente'], rows[0]['telefoneCliente'], rows[0]['pode_ligar'], rows[0]['enderecoCliente'], rows[0]['cidadeCliente'], rows[0]['estadoCliente'], rows[0]['cepCliente'], rows[0]['bairroCliente'], rows[0]['numCasa'], rows[0]['createdBy'], rows[0]['updatedBy'], rows[0]['created_at'], rows[0]['updated_at']);
             return cliente;
         } else {
             return false;
@@ -84,13 +92,13 @@ class ClientesModel {
 
     async gravar() {
         if (this.#idCliente == 0) {
-            let sql = 'insert into clientes (nomeCliente, telefoneCliente, pode_ligar, enderecoCliente, cidadeCliente, estadoCliente, cepCliente, createdBy) values (?, ?, ?, ?, ?, ?, ?, ?)';
-            let valores = [this.#nomeCliente, this.#telefoneCliente, this.#pode_ligar, this.#enderecoCliente, this.#cidadeCliente, this.#estadoCliente, this.#cepCliente, this.#createdBy];
+            let sql = 'insert into clientes (nomeCliente, telefoneCliente, pode_ligar, enderecoCliente, cidadeCliente, estadoCliente, cepCliente, bairroCliente, numCasa, createdBy) values (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)';
+            let valores = [this.#nomeCliente, this.#telefoneCliente, this.#pode_ligar, this.#enderecoCliente, this.#cidadeCliente, this.#estadoCliente, this.#cepCliente, this.#bairroCliente, this.#numCasa, this.#createdBy];
             let ok = await banco.ExecutaComando(sql, valores);
             return ok;
         } else {
-            let sql = 'update clientes set nomeCliente = ?, telefoneCliente = ?, pode_ligar = ?, enderecoCliente = ?, cidadeCliente = ?, estadoCliente = ?, cepCliente = ?, updatedBy = ? where idCliente = ?';
-            let valores = [this.#nomeCliente, this.#telefoneCliente, this.#pode_ligar, this.#enderecoCliente, this.#cidadeCliente, this.#estadoCliente, this.#cepCliente, this.#updatedBy, this.#idCliente];
+            let sql = 'update clientes set nomeCliente = ?, telefoneCliente = ?, pode_ligar = ?, enderecoCliente = ?, cidadeCliente = ?, estadoCliente = ?, cepCliente = ?, bairroCliente = ?, numCasa = ?, updatedBy = ? where idCliente = ?';
+            let valores = [this.#nomeCliente, this.#telefoneCliente, this.#pode_ligar, this.#enderecoCliente, this.#cidadeCliente, this.#estadoCliente, this.#cepCliente, this.#bairroCliente, this.#numCasa, this.#updatedBy, this.#idCliente];
             let ok = await banco.ExecutaComando(sql, valores);
             return ok;
         }
